@@ -1,6 +1,9 @@
 # This file documents the revision history for Perl extension Catalyst.
 
 5.8000_04
+        - Add MooseX::Emulate::Class::Accessor::Fast to Catalyst::Request,
+          needed by Catalyst::Request::REST (t0m)
+          - Test for this (t0m)
         - Make hostname resolution lazy (Marc Mims)
         - Support mocking virtualhosts in test suite (Jason Gottshall)
         - Add README (marcus)
